Fix primary buttons for dark mode

--- a/styles/ant.less
+++ b/styles/ant.less
@@ -89,6 +89,11 @@ body {
   color: var(--cr-secondary-text) !important;
 }
 
+.ant-btn-primary {
+  background: var(--cr-primary-color);
+  border: none;
+}
+
 .ant-tag {
   border-color: transparent;
   background-color: var(--cr-tertiary-bg);
